input-sys/include/libinput.1.26.0.h


struct libinput;
struct libinput_event_pointer;
struct libinput_event_tablet_tool;
enum libinput_tablet_tool_type {
	LIBINPUT_TABLET_TOOL_TYPE_PEN = 1,	
	LIBINPUT_TABLET_TOOL_TYPE_ERASER,	
	LIBINPUT_TABLET_TOOL_TYPE_BRUSH,	
	LIBINPUT_TABLET_TOOL_TYPE_PENCIL,	
	LIBINPUT_TABLET_TOOL_TYPE_AIRBRUSH,	
	LIBINPUT_TABLET_TOOL_TYPE_MOUSE,	
	LIBINPUT_TABLET_TOOL_TYPE_LENS,		
	LIBINPUT_TABLET_TOOL_TYPE_TOTEM,	
};
enum libinput_event_type {
	LIBINPUT_EVENT_NONE = 0,
	LIBINPUT_EVENT_DEVICE_ADDED,
	LIBINPUT_EVENT_DEVICE_REMOVED,
	LIBINPUT_EVENT_KEYBOARD_KEY = 300,
	LIBINPUT_EVENT_POINTER_MOTION = 400,
	LIBINPUT_EVENT_POINTER_MOTION_ABSOLUTE,
	LIBINPUT_EVENT_POINTER_BUTTON,
	LIBINPUT_EVENT_POINTER_AXIS,
	LIBINPUT_EVENT_POINTER_SCROLL_WHEEL,
	LIBINPUT_EVENT_POINTER_SCROLL_FINGER,
	LIBINPUT_EVENT_POINTER_SCROLL_CONTINUOUS,
	LIBINPUT_EVENT_TOUCH_DOWN = 500,
	LIBINPUT_EVENT_TOUCH_UP,
	LIBINPUT_EVENT_TOUCH_MOTION,
	LIBINPUT_EVENT_TOUCH_CANCEL,
	LIBINPUT_EVENT_TOUCH_FRAME,
	LIBINPUT_EVENT_TABLET_TOOL_AXIS = 600,
	LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY,
	LIBINPUT_EVENT_TABLET_TOOL_TIP,
	LIBINPUT_EVENT_TABLET_TOOL_BUTTON,
	LIBINPUT_EVENT_TABLET_PAD_BUTTON = 700,
	LIBINPUT_EVENT_TABLET_PAD_RING,
	LIBINPUT_EVENT_TABLET_PAD_STRIP,
	LIBINPUT_EVENT_TABLET_PAD_KEY,
	LIBINPUT_EVENT_TABLET_PAD_DIAL,
	LIBINPUT_EVENT_GESTURE_SWIPE_BEGIN = 800,
	LIBINPUT_EVENT_GESTURE_SWIPE_UPDATE,
	LIBINPUT_EVENT_GESTURE_SWIPE_END,
	LIBINPUT_EVENT_GESTURE_PINCH_BEGIN,
	LIBINPUT_EVENT_GESTURE_PINCH_UPDATE,
	LIBINPUT_EVENT_GESTURE_PINCH_END,
	LIBINPUT_EVENT_GESTURE_HOLD_BEGIN,
	LIBINPUT_EVENT_GESTURE_HOLD_END,
	LIBINPUT_EVENT_SWITCH_TOGGLE = 900,
};
double
libinput_event_pointer_get_dx(struct libinput_event_pointer *event);
int
libinput_event_tablet_tool_rotation_has_changed(
				struct libinput_event_tablet_tool *event);
int
libinput_event_tablet_tool_slider_has_changed(
				struct libinput_event_tablet_tool *event);
int
libinput_event_tablet_tool_size_major_has_changed(
				struct libinput_event_tablet_tool *event);
int
libinput_event_tablet_tool_size_minor_has_changed(
				struct libinput_event_tablet_tool *event);
int
libinput_event_tablet_tool_wheel_has_changed(
				struct libinput_event_tablet_tool *event);
double
libinput_event_tablet_tool_get_x(struct libinput_event_tablet_tool *event);
double
libinput_event_tablet_tool_get_y(struct libinput_event_tablet_tool *event);
double
libinput_event_tablet_tool_get_dx(struct libinput_event_tablet_tool *event);
double
libinput_event_tablet_tool_get_dy(struct libinput_event_tablet_tool *event);
double
libinput_event_tablet_tool_get_pressure(struct libinput_event_tablet_tool *event);
double
libinput_event_tablet_tool_get_distance(struct libinput_event_tablet_tool *event);
double
libinput_event_tablet_tool_get_tilt_x(struct libinput_event_tablet_tool *event);
double
libinput_event_tablet_tool_get_tilt_y(struct libinput_event_tablet_tool *event);
double
libinput_event_tablet_tool_get_rotation(struct libinput_event_tablet_tool *event);
double
libinput_event_tablet_tool_get_slider_position(struct libinput_event_tablet_tool *event);
double
libinput_event_tablet_tool_get_size_major(struct libinput_event_tablet_tool *event);
double
libinput_event_tablet_tool_get_size_minor(struct libinput_event_tablet_tool *event);
double
libinput_event_tablet_tool_get_x_transformed(struct libinput_event_tablet_tool *event,
					     uint32_t width);
double
libinput_event_tablet_tool_get_y_transformed(struct libinput_event_tablet_tool *event,
					     uint32_t height);